--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-8080}"
+    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-8080}",
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-8080}"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
